Fix för bilder mm

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,23 +1,13 @@
-# Auto detect text files and perform LF normalization
-* text eol=lf
 * text=auto
 
-# Custom for Visual Studio
-*.cs     diff=csharp
-*.sln    merge=union
-*.csproj merge=union
-*.vbproj merge=union
-*.fsproj merge=union
-*.dbproj merge=union
+*.php  text eol=lf
+*.css  text eol=lf
+*.js   text eol=lf
+*.htm  text eol=lf
+*.html text eol=lf
+*.sql  text eol=lf
 
-# Standard to msysgit
-*.doc	 diff=astextplain
-*.DOC	 diff=astextplain
-*.docx diff=astextplain
-*.DOCX diff=astextplain
-*.dot  diff=astextplain
-*.DOT  diff=astextplain
-*.pdf  diff=astextplain
-*.PDF	 diff=astextplain
-*.rtf	 diff=astextplain
-*.RTF	 diff=astextplain
+*.png   binary
+*.jpg   binary
+*.jpeg  binary
+*.gif   binary
